fix footer and bottom page gap

--- a/web/css/reskin-or/reskin.css
+++ b/web/css/reskin-or/reskin.css
@@ -182,6 +182,7 @@ body {
     margin: 0;
     padding-top: 32px;
     padding-bottom: 90px;
+    min-height: 100vh;
 }
 
 .content--projectDetails {
